--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>632a58c</version>
             <classifier>shaded</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
     </dependencies>
 
     <build>
